tutorial/3.nginx-controller/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress # 이 ingress 서비스의 이름입니다.
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /one(/|$)(.*) # 정규표현식입니다. 
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one # 정규식에 match가 되면 one 라는 pod로 연결해줍닏.
            port:
              number: 80
      - path: /two(/|$)(.*) # 또 다른 정규식입니다. 
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-two # 이 정규식에 match가 되면 two 라는 pod로 연결해줍니다.
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-world-ingress-static
#   namespace: ingress-basic
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /static/$2
# spec:
#   rules:
#   - http:
#       paths:
#       - path:
#         pathType: Prefix
#         backend:
#           service:
#             name: aks-helloworld-one
#             port:
#               number: 80
#         path: /static(/|$)(.*)
